Fix input box styles on mobile devices

--- a/app/task.css
+++ b/app/task.css
@@ -1,5 +1,6 @@
 h3 {
     text-align: center;
+    padding: 0 10px;
 }
 
 a.verb:hover {
@@ -64,13 +65,17 @@ input.error {
     .verb, .answer, .object {
         display: block;
     }
+
     .verb {
         border: none;
         text-decoration: underline;
     }
+
     input {
         width: 100%;
+        margin: 10px 0 15px 0;
     }
+
     .result {
         margin-top: 30px;
     }
